--- a/stock.html
+++ b/stock.html
@@ -4,6 +4,7 @@
         <title>Aplicación de Stock</title>
         <script src="clases.js"></script>
         <script src="funciones.js"></script>
+        <script src="FormElement.js"></script>
         <script src="stock.js"></script>
         <link rel="stylesheet" href="styles.css"> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
