--- a/stock.html
+++ b/stock.html
@@ -5,11 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="FormElement.js"></script>
-        <script src="QuantityDiv.js"></script>
-        <script src="clases.js"></script>
-        <script src="funciones.js"></script>
-        <script src="stock.js"></script>
+        <script type="module" src="stockApp.js"></script>
         <link rel="stylesheet" href="styles.css"> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     </head>
