Added description and minimum quantity fields to Item

--- a/stock.html
+++ b/stock.html
@@ -15,6 +15,7 @@
             <div class="navigation-buttons">
                 <button id='add-item-but' class="nav-but">Agregar ítem</button>  
                 <button id='show-stock-but' class="nav-but">Ver stock</button>           
+                <button id='prep-order-but' class="nav-but">Pedido</button>
             </div>
         </div>
         <hr>
