--- a/stock.html
+++ b/stock.html
@@ -9,6 +9,7 @@
         <script src="https://kit.fontawesome.com/8b1a21b909.js" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>
         <link rel="stylesheet" href="styles.css"> 
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -53,7 +54,13 @@
             <div id="add-item-div"></div>
             <div id="show-item-div"></div>
             <div id="change-item-div"></div>
-            <div id="low-stock-div"></div>
+            <div id="low-stock-div">
+                <h4 id="no-low-stock-alert">No hay ítems con bajo stock!</h4>
+                <table id="low-stock-table" class="table table-hover">
+                    <thead id="low-stock-table-head"></thead>
+                    <tbody id="low-stock-table-body"></tbody>
+                </table>
+            </div>
         </div>
     </body>
 </html>
